@@ -1,3 +1,7 @@
+2012-01-17 04:05-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/NSXMLElement.m
+
 2012-01-17 03:48-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSXMLDocument.m
